# python-minimal-boilerplate

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: tests.yaml
tests/: test_hello.py
